tests/neg/semantic_main_args_bad_signature.baa
// RUN: expect-fail
// EXPECT: توقيع 'الرئيسية' غير صحيح

صحيح الرئيسية(نص س) {
    اطبع س.
    إرجع ٠.
}

